# conceptstl

./: CMakeLists.txt  CMakePresets.json  README.md  conceptstl.kdev4
cmake/: building_config.cmake  unit_test_integration.cmake
include/stl/: format.hpp  memory.hpp  vector.hpp
tests/: CMakeLists.txt  concept_stl_ut.cc  test_functions.cmake
tests/format/: should_compile.cc  should_fail_compile.cc
tests/vector/: should_compile.cc  should_fail_compile.cc
